fix layout on mobile

--- a/src/sass/components/_alert.scss
+++ b/src/sass/components/_alert.scss
@@ -1,9 +1,9 @@
 .alert{
     width: 100%;
-    height: 30px;
-    line-height: 30px;
+    line-height: 1.3;
     text-align: center;
     color: $red;
     background: $warn;
     font-family: $sans-font;
+    padding: 10px;
 }
